# openvanilla-modules

./: ChangeLog  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
DataTables/: Makefile.am  Makefile.in  hangulromaja.cin  scj62.cin  vims.cin  viqr.cin
Frameworks/: Makefile.am  Makefile.in
Frameworks/OpenVanilla/: Makefile.am  Makefile.in
Frameworks/OpenVanilla/Headers/: Makefile.am  Makefile.in
Frameworks/OpenVanilla/Source/: Makefile.am  Makefile.in
Modules/: Makefile.am  Makefile.in
Modules/OVIMGeneric/: Makefile.am  Makefile.in  OVIMGeneric.cpp
Modules/SharedLibrary/: Makefile.am  Makefile.in  OVCINInfo.cpp  OVCandidateList.cpp
OVIMGeneric/: 3corner.cin  4corner.cin  4corner5.cin  Makefile.am  Makefile.in  OVIMGeneric.cpp  array30.cin  array40.cin  cangjie.cin  cj5.cin  ckc.cin  dapu.cin  dna.cin  erbi-kuai.cin  ez.cin  fcitx-erbi.cin  fcitx-qxm.cin  fcitx-wanfeng.cin  hailu.cin  hangul.cin  hangulromaja.cin  hanja.cin  hiragana.cin  ile.cin  jinjin.cin  jsm.cin  jtcj.cin  jyutping.cin  jyutping0.cin  katakana.cin  kks.cin  kks_hakka_henry.cin  kks_hakka_tl.cin  kks_tl.cin  newcj.cin  newcj3.cin  nippon.cin  phofsi.cin  pinyin0.cin  roman.cin  (+14 more)
OVIMPhonetic/: Makefile.in
SharedData/: Makefile.in
SharedHeaders/: Makefile.am  Makefile.in
SharedSource/: Makefile.in  OVCINInfo.cpp  OVCandidateList.cpp
debian/: README.source  changelog  control  copyright  libopenvanilla-data.install  libopenvanilla-dev.install  libopenvanilla.install  openvanilla-imgeneric-data-ja.install  openvanilla-imgeneric-data-ko.install  openvanilla-imgeneric-data-th.install  openvanilla-imgeneric-data-vi.install  openvanilla-imgeneric-data-zh-cn.install  openvanilla-imgeneric-data-zh-hk.install  openvanilla-imgeneric-data-zh-tw.install  openvanilla-imgeneric.install  rules  watch
debian/patches/: adapt-to-dfsg.patch  adapt_to_dfsg.patch  fix_build_failure.patch  series
