CIN_jp_JP= \
hiragana.cin \
katakana.cin \
nippon.cin

CIN_ko_KR= \
hangul.cin \
hangulromaja.cin \
hanja.cin

CIN_th_TH= \
thai.cin

CIN_vi_VN= \
vims.cin \
viqr.cin

CIN_zh_CN= \
pinyin.cin \
pinyin0.cin \
shuangpin.cin \
wubizixing2.cin \
erbi-kuai.cin \
fcitx-erbi.cin \
fcitx-qxm.cin \
fcitx-wanfeng.cin \
jtcj.cin \
wbx.cin \
wubizixing.cin \
zhengma.cin

CIN_zh_HK= \
ile.cin \
jyutping.cin \
jyutping0.cin

CIN_zh_TW= \
cangjie.cin \
uniliu.cin \
simplecj.cin \
3corner.cin \
4corner.cin \
4corner5.cin \
array30.cin \
array40.cin \
cj.cin \
cj5.cin \
ckc.cin \
dayi3.cin \
dna.cin \
ez.cin \
jinjin.cin \
jsm.cin \
jtcj.cin \
newcj.cin \
newcj3.cin \
roman.cin \
scj62.cin \
simplex.cin \
simplex5.cin \
wu.cin 

CIN_zh_TW_hakka= \
dapu.cin \
hailu.cin \
kks_hakka_henry.cin \
kks_hakka_tl.cin \
sixian.cin \
tp_hakka_hl.cin \
tp_hakka_sy.cin

CIN_zh_TW_taigi= \
kks.cin \
kks_tl.cin \
phofsi.cin \
tlpa.cin

CIN_asia= \
$(CIN_jp_JP) \
$(CIN_ko_KR) \
$(CIN_th_TH) \
$(CIN_vi_VN) \
pinyin.cin  pinyin0.cin  shuangpin.cin  wubizixing2.cin \
$(CIN_zh_HK) \
cangjie.cin  uniliu.cin  array40.cin 

if WITH_jp_JP
cin_jp_JP = $(CIN_jp_JP)
endif

if WITH_ko_KR
cin_ko_KR = $(CIN_ko_KR)
endif

if WITH_th_TH
cin_th_TH = $(CIN_th_TH)
endif

if WITH_vi_VN
cin_vi_VN = $(CIN_vi_VN)
endif

if WITH_zh_CN
cin_zh_CN = $(CIN_zh_CN)
endif

if WITH_zh_HK
cin_zh_HK = $(CIN_zh_HK)
endif

if WITH_zh_TW
cin_zh_TW = $(CIN_zh_TW)
endif

if WITH_zh_TW_hakka
cin_zh_TW_hakka = $(CIN_zh_TW_hakka)
endif

if WITH_zh_TW_taigi
cin_zh_TW_taigi = $(CIN_zh_TW_taigi)
endif

if WITH_asia
cin_asia = $(CIN_asia)
endif


ovimgenericdir = $(datadir)/openvanilla/OVIMGeneric

ovimgeneric_DATA= \
$(cin_jp_JP) \
$(cin_ko_KR) \
$(cin_th_TH) \
$(cin_vi_VN) \
$(cin_zh_CN) \
$(cin_zh_HK) \
$(cin_zh_TW) \
$(cin_zh_TW_hakka) \
$(cin_zh_TW_taigi) \
$(cin_asia)

EXTRA_DIST = \
$(CIN_jp_JP) \
$(CIN_ko_KR) \
$(CIN_th_TH) \
$(CIN_vi_VN) \
$(CIN_zh_CN) \
$(CIN_zh_HK) \
$(CIN_zh_TW) \
$(CIN_zh_TW_hakka) \
$(CIN_zh_TW_taigi) \
$(CIN_asia)
		 

