#./OpenVanilla/Headers/OVFileHelper.h
#./OpenVanilla/Headers/OVLibrary.h
#./OpenVanilla/Headers/OVStringHelper.h
#./OpenVanilla/Headers/OVUTF8Helper.h
#./OpenVanilla/Headers/OVUtility.h
#./OpenVanilla/Headers/OVWildcard.h
#./OpenVanilla/Headers/OpenVanilla.h
#./OpenVanilla/Source/FrameworkStub.cpp
#./OpenVanilla/OpenVanillaFramework-Info.plist
SUBDIRS= OpenVanilla
