noinst_LTLIBRARIES = libSharedLibrary.la

libSharedLibrary_la_SOURCES = OVCIN.cpp \
                            OVCIN.h \
                            OVCINInfo.cpp \
                            OVCINInfo.h \
                            OVCandidateList.cpp \
                            OVCandidateList.h \
                            OVFileHandler.cpp \
                            OVFileHandler.h \
                            OVKeySequence.h \
                            OVOSDef.h \
                            OVPhoneticLib.cpp \
                            OVPhoneticLib.h \
                            OVSQLite3.h \
                            OVStringToolKit.cpp \
                            OVStringToolKit.h 

libSharedLibrary_la_CPPFLAGS = -I$(top_srcdir)/Frameworks/OpenVanilla -I$(top_srcdir)/Frameworks/OpenVanilla/Headers
